# umls_thesaurus

./: .gitignore  pyproject.toml
docs/source/: conf.py  index.rst  modules.rst  umls_thesaurus.rst
tests/: test_umls_thesaurus.py
umls_thesaurus/: umls.py
